Try to fix vertical scroll on mobile Chrome browser

--- a/css/styles.css
+++ b/css/styles.css
@@ -40,7 +40,6 @@ h1 {
     padding-bottom: 10px;
     height: 100vh;
     overflow: scroll;
-    -webkit-overflow-scrolling: touch;
 }
 
 .about h1 {
